Added arabic feedback