@@ -2,9 +2,7 @@ package com.example.optifit;
 
 import com.google.gson.Gson;
 
-import android.content.res.Resources;
-import android.content.res.TypedArray;
-import android.graphics.Paint;
+
 import android.media.AudioFormat;
 import android.media.MediaPlayer;
 import android.media.MediaRecorder;
@@ -32,8 +30,6 @@ import androidx.core.content.ContextCompat;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Hashtable;
-import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Timer;
@@ -49,6 +45,7 @@ public class MainActivity extends AppCompatActivity {
     private TextView wordTxt;
     private Button listenBtn;
     private TextView responseTxt;
+    private TextView responseTxtExtraLan;
     private ImageView earImage;
     private Button recordBtn;
 
@@ -62,7 +59,7 @@ public class MainActivity extends AppCompatActivity {
 
     private ResourceLoader resourceLoader;
     ArrayList<Pair<String, String>> wordList = new ArrayList<>();
-    ArrayList<Triple<String, String, String>> specialFeedbackCases = new ArrayList<>();
+    ArrayList<ArrayList<String>> specialFeedbackCases = new ArrayList<>();
     Pair<String, String> currentWord;
 
     @SuppressLint({"RestrictedApi"})
@@ -77,6 +74,7 @@ public class MainActivity extends AppCompatActivity {
         fluentPlayer = MediaPlayer.create(this, R.raw.paere);
 
         responseTxt = findViewById(R.id.responseTxt);
+        responseTxtExtraLan = findViewById(R.id.responseTxtExtraLan);
         earImage = findViewById(R.id.earImage);
 
         initializeWord();
@@ -130,9 +128,11 @@ public class MainActivity extends AppCompatActivity {
         boolean specialCasePresent = specialFeedback(result);
         if (!specialCasePresent) {
             if (currentWord.second.equals(result)) {
-                this.runOnUiThread(() -> responseTxt.setText(getString(R.string.correctPronunciation, currentWord.first.toLowerCase())));
+                this.runOnUiThread(() -> responseTxt.setText(getString(R.string.correctPronunciationDan, currentWord.first.toLowerCase())));
+                this.runOnUiThread(() -> responseTxtExtraLan.setText(getString(R.string.correctPronunciationAra, currentWord.first.toLowerCase())));
             } else {
-                this.runOnUiThread(() -> responseTxt.setText(getString(R.string.incorrectPronunciation, currentWord.first.toLowerCase())));
+                this.runOnUiThread(() -> responseTxt.setText(getString(R.string.incorrectPronunciationDan, currentWord.first.toLowerCase())));
+                this.runOnUiThread(() -> responseTxtExtraLan.setText(getString(R.string.incorrectPronunciationAra, currentWord.first.toLowerCase())));
             }
         }
     }
@@ -141,13 +141,14 @@ public class MainActivity extends AppCompatActivity {
      * Calls special feedback case any case applies to the current word and the pronunciation result
      */
     private boolean specialFeedback(String result) {
-        for (Triple<String, String, String> specialCase : specialFeedbackCases) {
+        for (ArrayList<String> specialCase : specialFeedbackCases) {
             String[] wordPhonemes = currentWord.second.split(" ");
             String[] resultPhonemes = result.split(" ");
-            if (Arrays.stream(wordPhonemes).anyMatch((s) -> s.equals(specialCase.getFirst()))
-                    && Arrays.stream(resultPhonemes).anyMatch((s) -> s.equals(specialCase.getSecond()))
-                    && currentWord.second.indexOf(specialCase.getFirst()) == result.indexOf(specialCase.getSecond())) {
-                this.runOnUiThread(() -> responseTxt.setText(getString(R.string.incorrectPronunciationSpecialCase, specialCase.getThird())));
+            if (Arrays.stream(wordPhonemes).anyMatch((s) -> s.equals(specialCase.get(0)))
+                    && Arrays.stream(resultPhonemes).anyMatch((s) -> s.equals(specialCase.get(1)))
+                    && currentWord.second.indexOf(specialCase.get(0)) == result.indexOf(specialCase.get(1))) {
+                this.runOnUiThread(() -> responseTxt.setText(getString(R.string.incorrectPronunciationSpecialCaseDan, specialCase.get(2))));
+                this.runOnUiThread(() -> responseTxtExtraLan.setText(getString(R.string.incorrectPronunciationSpecialCaseAra, specialCase.get(3))));
                 return true;
             }
         }
@@ -199,9 +200,9 @@ public class MainActivity extends AppCompatActivity {
             prepareRecorder();
 
             responseTxt.setVisibility(View.GONE);
+            responseTxtExtraLan.setVisibility(View.GONE);
             earImage.setVisibility(View.VISIBLE);
             earImage.setAnimation(AnimationUtils.loadAnimation(getApplicationContext(), R.anim.pulse));
-
             try {
                 mRecorder.prepare();
             } catch (IOException e) {
@@ -253,8 +254,10 @@ public class MainActivity extends AppCompatActivity {
 
         earImage.clearAnimation();
         earImage.setVisibility(View.GONE);
-        responseTxt.setText(R.string.gettingResource);
+        responseTxt.setText(R.string.gettingResourceDan);
+        responseTxtExtraLan.setText(R.string.gettingResourceAra);
         responseTxt.setVisibility(View.VISIBLE);
+        responseTxtExtraLan.setVisibility(View.VISIBLE);
 
         // Add delay to release event to ensure that the end of the word is also recorded
         Timer buttonTimer = new Timer();
@@ -316,4 +319,5 @@ public class MainActivity extends AppCompatActivity {
         // Used to ensure the app doesn't crash when the user clicks button instead of holding it down
         return null;
     }
+
 }
